--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </td>
       <td width="80%" valign="top">
         <p><a href="https://exomlapi.com"><strong><font face="Arial, sans-serif">ExoML</font></strong></a> - Free AI chat app and API</p>
-        <p><a href="https://privatecloud.life"><font face="Arial, sans-serif">PrivateCloud</font></a> - Free anonymous file storage</p>
+        <p><a href="https://privatecloud.life"><strong></strong><font face="Arial, sans-serif">PrivateCloud</font></strong></a> - Free anonymous file storage</p>
         <p><a href="https://cablyai.com"><em><font face="Arial, sans-serif">CablyAI</font></em></a> - Discontinued AI API</p>
       </td>
     </tr>
